# guess-the-password

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
config/: chatgpt.json  claude.json  ollama.json
docker/development/: docker-compose-gpu.yaml  docker-compose.yaml
docker/game/: Dockerfile
docker/ollama/: entrypoint.sh
frontend/: app.py
frontend/static/js/: confetti.js
frontend/templates/: base.html  chat_history.html  game.html  header.html  index.html  level_cards.html  level_list.html  password_form.html  query_form.html  win.html
game/: game.py  guard.py  models.py  prompts.py
game/levels/: censor.py  extended_prompt.py  no_guard.py  simple_prompt.py
